# ericarthurc.com

./: CHANGELOG.md  Cargo.toml  README.md  sample.env
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/admin/: Admin.tsx  adminForm.ts
frontend/src/admin/Login/: Login.tsx
frontend/src/admin/Panel/: Panel.tsx
frontend/src/admin/Panel/Creator/: Creator.tsx
frontend/src/admin/Panel/Editor/: Editor.tsx
frontend/src/admin/Panel/Post/: Post.tsx
frontend/src/admin/style/: admin.scss
frontend/src/api/: adminAPI.ts  siteAPI.ts
frontend/src/components/Header/: Header.tsx
frontend/src/components/Meta/: Meta.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/Spinner/: Spinner.tsx
frontend/src/components/Themer/: Themer.tsx
frontend/src/pages/About/: About.tsx
frontend/src/pages/Blog/: Blog.tsx
frontend/src/pages/BlogIndex/: BlogIndex.tsx
frontend/src/pages/Category/: Category.tsx
frontend/src/pages/Series/: Series.tsx
frontend/src/pages/SeriesIndex/: SeriesIndex.tsx
frontend/src/styles/: main.scss  variables.scss
frontend/src/styles/components/: card.scss  header.scss  navbar.scss  spinner.scss
frontend/src/styles/layouts/: markdown.scss
frontend/src/styles/pages/: admin.scss
src/: main.rs
src/database/: mod.rs  postgres.rs  redis.rs
src/errors/: mod.rs
src/handlers/: admin.rs  category.rs  meta.rs  mod.rs  post.rs  series.rs
src/middlewares/: admin.rs
src/models/: post.rs
src/models/dtos/: meta.rs
src/services/: mod.rs
(+2 files in other folders)
