[package]
name = "ericarthurc"
version = "1.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
bb8 = "0.8"
bb8-postgres = "0.8"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.15.0"
cookie = "0.16"
dotenvy = "0.15"
futures = "0.3.25"
http = "0.2"
http-body = "0.4"
jsonwebtoken = "8.1.1"
once_cell = "1.16.0"
openssl = "0.10.41"
postgres-openssl = "0.5.0"
postgres-types = { version = "0.2", features = ["derive"] }
redis = { version = "0.22", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5"
tokio = { version = "1", features = ["full"] }
tokio-postgres =  { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
tower = { version = "0.4", features = ["full"] }
tower-cookies = "0.8"
tower-http = { version = "0.3", features = ["full"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
